--- a/src/UniNotifier_ru_ru.resx
+++ b/src/UniNotifier_ru_ru.resx
@@ -127,11 +127,11 @@
     <value>Удалить выбранное оповещение?</value>
   </data>
   <data name="HelpText" xml:space="preserve">
-    <value>Данная служба предоставляет возможность получать оповещения об изменении состояния отслеживаемых веб-страниц (иначе – об обновлениях и новостях) в виде системных сообщений.
+    <value>Это приложение предоставляет возможность получать уведомления об изменении состояния указанных пользователем веб-сайтов. Другими словами, об их обновлениях, которые будут представлены в виде текстового журнала. Загружается только то, что указал пользователь – все остальные объекты (включая рекламу) игнорируются.
 
-Контекстное меню, вызываемое по правому щелчку на значке приложения в трее, позволяет управлять оповещениями и конструировать их, просматривать их в большом окне, а также запрашивать информацию о приложении и переходить на отслеживаемые страницы.
-
-Кроме того, приложение с указанной частотой обновления самостоятельно запрашивает новые записи и при их наличии отображает соответствующие оповещения</value>
+- Раздел настроек позволяет управлять уведомлениями и конструировать их.
+- Главный журнал обеспечивает просмотр новостей, переход на веб-страницы, с которых они были получены, и возможность ими поделиться.
+- Закреплённое служебное оповещение будет сообщать о наличии непрочитанных новостей, полученных в фоновом режиме</value>
   </data>
   <data name="KeywordNotSpecified" xml:space="preserve">
     <value>В поле «Начало» не указано ключевое слово для поиска</value>
@@ -224,9 +224,9 @@
 С уважением, Nicolay B. aka RD AAOW</value>
   </data>
   <data name="Tip_00" xml:space="preserve">
-    <value>Добро пожаловать в UniNotifier! Здесь вы можете настроить новостной сервис и сами уведомления. Некоторые кнопки и поля содержат полезные подсказки, которые будут показаны однократно.
+    <value>Добро пожаловать в uNot – службу наблюдения за состоянием веб-ресурсов! Здесь вы можете настроить службу и сами уведомления. Некоторые кнопки и поля содержат полезные подсказки, которые будут показаны однократно.
 
-Подробные инструкции по настройке сервиса доступны на YouTube (кнопка в окне сведений о приложении)</value>
+Подробные инструкции по настройке сервиса доступны на YouTube (кнопка «Руководство» в окне сведений о приложении)</value>
   </data>
   <data name="Tip_01" xml:space="preserve">
     <value>Эта кнопка позволяет применить изменения, выполненные в правой части окна, к текущему выбранному уведомлению</value>
@@ -268,7 +268,7 @@
     <value>Мастер оповещений</value>
   </data>
   <data name="WizardFailure" xml:space="preserve">
-    <value>Похоже, этот сайт не поддерживается в UniNotifier. Попробуйте использовать другое ключевое слово</value>
+    <value>Похоже, этот сайт не поддерживается. Попробуйте использовать другое ключевое слово</value>
   </data>
   <data name="WizardSearch1" xml:space="preserve">
     <value>Определяем маркеры...</value>
@@ -279,14 +279,14 @@
   <data name="WizardStep1" xml:space="preserve">
     <value>Вас приветствует мастер создания оповещений!
 
-Эта функция поможет сформировать оповещение, которое сможет автоматически опрашивать UniNotifier.
+Эта функция поможет сформировать оповещение (наблюдатель) для веб-ресурса.
 
-Для начала введите ссылку (URL) на сайт, с которого Вы хотите получать оповещения</value>
+Для начала введите ссылку (URL) на сайт, за которым Вы хотите наблюдать</value>
   </data>
   <data name="WizardStep2" xml:space="preserve">
     <value>Теперь укажите ключевое слово.
 
-Это слово (или фраза) должно присутствовать прямо сейчас в той части сайта, которая будет меняться со временем, что и будет источником текстов для оповещений. Идеальной будет фраза, присутствующая сейчас только в этой области либо впервые встречается на сайте именно в ней. Регистр букв значения не имеет</value>
+Это слово (или фраза) должно присутствовать прямо сейчас в той части сайта, за которой Вы хотите наблюдать и от которой ожидаете изменений с течением времени. Идеальной будет фраза, присутствующая сейчас только в этой области либо впервые встречается на сайте именно в ней. Регистр букв значения не имеет</value>
   </data>
   <data name="WizardStep3" xml:space="preserve">
     <value>По указанным настройкам получен текст, приведённый ниже. Если он соответствует Вашим ожиданиям, нажмите ОК для добавления оповещения. В противном случае нажмите Повторить, и мы попробуем ещё раз</value>
