--- a/src/android/UniNotifier_ru_ru.resx
+++ b/src/android/UniNotifier_ru_ru.resx
@@ -460,14 +460,16 @@
     <value>Создание нового оповещения:</value>
   </data>
   <data name="Tip01" xml:space="preserve">
-    <value>Добро пожаловать в UniNotifier!
+    <value>Добро пожаловать в uNot – службу наблюдения за состоянием веб-ресурсов!
 
-• На этой странице Вы можете настроить уведомления.
-• Смахните экран вправо, чтобы задать параметры службы новостей</value>
+• На этой странице Вы можете настраивать созданные ранее уведомления.
+
+• Смахните этот экран вправо, чтобы задать параметры службы и добавить новые ресурсы для наблюдения</value>
   </data>
   <data name="Tip02" xml:space="preserve">
     <value>• Подробная инструкция по настройке службы доступна на YouTube. Смахните этот экран влево и выберите руководство пользователя.
-• Главный журнал уведомлений доступен на первой странице приложения. Он будет открываться при каждом следующем вызове UniNotifier</value>
+
+• Главный журнал уведомлений доступен на первой странице приложения. Он будет открываться при каждом следующем вызове</value>
   </data>
   <data name="Tip03_1" xml:space="preserve">
     <value>Внимание! Некоторые устройства требуют ручного разрешения на доступ в интернет (например, если активен режим экономии интернет-трафика). Проверьте его, если уведомления не будут работать</value>
@@ -499,7 +501,7 @@
     <value>В некоторых случаях нужный участок веб-страницы оказывается на ней не первым, который ограничен заданными маркерами. Это поле позволяет указать, какое именно вхождение целевого участка (от начала страницы) следует отображать</value>
   </data>
   <data name="Tip04_18" xml:space="preserve">
-    <value>Все операции с текстами уведомлений доступны по клику на них прямо в главном журнале</value>
+    <value>Все операции с текстами уведомлений доступны по клику на них в главном журнале</value>
   </data>
   <data name="Tip04_2" xml:space="preserve">
     <value>Эта кнопка позволяет поделиться настройками уведомлений</value>
@@ -551,7 +553,7 @@
     <value>Веб-браузер отсутствует на этом устройстве</value>
   </data>
   <data name="WizardFailure" xml:space="preserve">
-    <value>Похоже, этот сайт не поддерживается в UniNotifier. Попробуйте использовать другое ключевое слово</value>
+    <value>Похоже, этот сайт не поддерживается. Попробуйте использовать другое ключевое слово</value>
   </data>
   <data name="WizardSearch1" xml:space="preserve">
     <value>Определяем маркеры...</value>
@@ -562,14 +564,14 @@
   <data name="WizardStep1" xml:space="preserve">
     <value>Вас приветствует мастер создания оповещений!
 
-Эта функция поможет сформировать оповещение, которое сможет автоматически опрашивать UniNotifier.
+Эта функция поможет сформировать оповещение (наблюдатель) для веб-ресурса.
 
-Для начала введите ссылку (URL) на сайт, с которого Вы хотите получать оповещения</value>
+Для начала введите ссылку (URL) на сайт, за которым Вы хотите наблюдать</value>
   </data>
   <data name="WizardStep2" xml:space="preserve">
     <value>Теперь укажите ключевое слово.
 
-Это слово (или фраза) должно присутствовать прямо сейчас в той части сайта, которая будет меняться со временем, что и будет источником текстов для оповещений. Идеальной будет фраза, присутствующая сейчас только в этой области либо впервые встречается на сайте именно в ней. Регистр букв значения не имеет</value>
+Это слово (или фраза) должно присутствовать прямо сейчас в той части сайта, за которой Вы хотите наблюдать и от которой ожидаете изменений с течением времени. Идеальной будет фраза, присутствующая сейчас только в этой области либо впервые встречается на сайте именно в ней. Регистр букв значения не имеет</value>
   </data>
   <data name="WizardStep3" xml:space="preserve">
     <value>По указанным настройкам получен текст, приведённый ниже. Если он соответствует Вашим ожиданиям, нажмите ОК для добавления оповещения. В противном случае нажмите Повторить, и мы попробуем ещё раз</value>
